[package]
name = "geo-buffer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
geo = "0.30.0"
geo-types = "0.7.16"
wkt = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "console",
]

[patch.crates-io]
geo = { path = "../../geo/geo" }
geo-types = { path = "../../geo/geo-types" }
