[package]
name = "geo-buffer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
geo = "0.30.0"
wkt = "0.14.0"
geojson = "0.24.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.98"

[patch.crates-io]
geo = { path = "../../geo/geo" }
geo-types = { path = "../../geo/geo-types" }
